@startuml
abstract class shay.finalproject.webcraeler.crawlers.linktracker.AbstractVisitedTrackerDeque {
# Deque<URI> m_urlsToVisit
+ boolean add(URI)
+ {abstract}boolean addAll(Set<URI>)
+ boolean isEmpty()
+ boolean contains(URI)
+ URI poll()
+ int size()
}
class shay.finalproject.webcraeler.crawlers.linktracker.AddAllDfs {
+ boolean addAll(Set<URI>)
}
interface shay.finalproject.webcraeler.crawlers.limiter.interfaces.Limiter {
~ boolean continueProcessing(VisitedLinkTracker,long,int)
~ int getDepth()
}
interface shay.finalproject.webcraeler.crawlers.interfaces.VisitedLinkTracker {
~ boolean add(URI)
~ boolean addAll(Set<URI>)
~ boolean isEmpty()
~ boolean contains(URI)
~ URI poll()
~ int size()
}
class shay.finalproject.webcraeler.crawlers.linktracker.AddAllBfs {
+ boolean addAll(Set<URI>)
}
abstract class shay.finalproject.webcraeler.crawlers.limiter.interfaces.AbstractLimiter {
# CrawlerConfig m_config
# boolean noMaxDepthSet
# boolean noMaxPagesSet
# int m_depth
# int m_depthJumper
+ int getDepth()
}
interface shay.finalproject.webcraeler.crawlers.interfaces.Crawler {
~ void crawl()
}
class shay.finalproject.webcraeler.crawlers.limiter.DfsLimiter {
+ boolean continueProcessing(VisitedLinkTracker,long,int)
}
class shay.finalproject.webcraeler.crawlers.WebCrawler {
+ void crawl()
+ void endCrawl()
# List<String> extractedTextToWords(Document)
+ Statistics getStatistics()
}
class shay.finalproject.webcraeler.crawlers.limiter.BfsLimiter {
+ boolean continueProcessing(VisitedLinkTracker,long,int)
}


shay.finalproject.webcraeler.crawlers.interfaces.VisitedLinkTracker <|.. shay.finalproject.webcraeler.crawlers.linktracker.AbstractVisitedTrackerDeque
shay.finalproject.webcraeler.crawlers.linktracker.AbstractVisitedTrackerDeque <|-- shay.finalproject.webcraeler.crawlers.linktracker.AddAllDfs
shay.finalproject.webcraeler.crawlers.linktracker.AbstractVisitedTrackerDeque <|-- shay.finalproject.webcraeler.crawlers.linktracker.AddAllBfs
shay.finalproject.webcraeler.crawlers.limiter.interfaces.Limiter <|.. shay.finalproject.webcraeler.crawlers.limiter.interfaces.AbstractLimiter
shay.finalproject.webcraeler.crawlers.limiter.interfaces.AbstractLimiter <|-- shay.finalproject.webcraeler.crawlers.limiter.DfsLimiter
shay.finalproject.webcraeler.crawlers.interfaces.Crawler <|.. shay.finalproject.webcraeler.crawlers.WebCrawler
shay.finalproject.controller.infrastructure.StatisticsService <|.. shay.finalproject.webcraeler.crawlers.WebCrawler
shay.finalproject.webcraeler.crawlers.limiter.interfaces.AbstractLimiter <|-- shay.finalproject.webcraeler.crawlers.limiter.BfsLimiter
@enduml